agregamos un boton para modo oscuro basico

--- a/style.css
+++ b/style.css
@@ -2,3 +2,8 @@ body{
     background-color:rgb(40, 85, 87);
     color: bisque;
 }
+
+.modo-oscuro{
+    background-color: black;
+    color:bisque;
+}
